# PairSpot

./: Arch.md  README.md
.claude/: .gitignore  settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_p1_auth.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  account.py  auth.py  couples.py  health.py  posts.py
backend/app/core/: apple_auth.py  database.py  exceptions.py  security.py  storage.py
backend/app/models/: __init__.py  auth.py  base.py  couple.py  post.py  user.py  wallet.py
backend/app/schemas/: account.py  auth.py  couple.py  post.py
backend/app/services/: account_service.py  auth_service.py  couple_service.py  post_service.py
backend/app/services/email/: base.py  console_provider.py  resend_provider.py
backend/app/tasks/: __init__.py  email_tasks.py  image_tasks.py
backend/app/tests/: conftest.py  test_auth.py  test_health.py
backend/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
backend/scripts/: seed.py
web/: package-lock.json  package.json
web/src/app/: NavBar.tsx  globals.css  layout.tsx
web/src/app/account/: page.tsx
web/src/app/couple/: page.tsx
web/src/app/login/: page.tsx
web/src/app/posts/: page.tsx
web/src/app/posts/create/: page.tsx
web/src/app/register/: page.tsx
web/src/app/register/complete/: page.tsx
web/src/app/verify/: page.tsx
web/src/lib/: api.ts  types.ts
